
                         JGoodies Looks
                          Version @version.name@
                          Release Notes
                        

INTRODUCTION

    This version requires Java 5 and the new JGoodies Common library.
    Make sure that you include jgoodies-common-1.0.0.jar in your
    classpath when using this Looks version.
    

OTHER CHANGES

    o Fixed bug in the FontTest on non-Windows platforms.
    
---------------------------------------------------------------------------



                         JGoodies Looks
                          Version 2.3.1
                          Release Notes
                        

INTRODUCTION

    This maintenance update fixes an issue with classic Windows combo
    boxes in white-on-black contrast mode. 
    

BUG FIXES

    o The Windows classic L&f combo box arrow button paints the arrow icon
      always in black, ignoring the desktop color theme.
    
---------------------------------------------------------------------------


                         JGoodies Looks
                          Version 2.3.0
                          Release Notes
                        

INTRODUCTION

    This update adds support for Windows 7 and Windows Server 2008 R2.


CHANGES

    o Introduced LookUtils#IS_OS_WINDOWS_6_OR_LATER that replaces
      #IS_OS_WINDOWS_VISTA. The latter is now deprecated.
    o The final marker has been removed from WindowsLookAndFeel.
    
---------------------------------------------------------------------------

                         JGoodies Looks
                          Version 2.2.2
                          Release Notes
                        

INTRODUCTION

    This update fixes a minor issues on Vista with Java 5.
    

BUG FIXES

    o Poor menu selection foreground on Vista with Java 5.
    o Fixed a potential NPE in WindowsFieldCaret#focusLost.
      
      
OTHER CHANGES

    o Removed the ExtBasicArrowButtonHandler that is now obsolete.

