@@ -11,9 +11,9 @@ Name=JGoodies Looks
 shortname=looks
 name=jgoodies-looks
 spec.version=2.4
-impl.version=2.4.0b2
-version.name=2.4 Beta2
-dist.version=2_4_0-BETA2-20100517
+impl.version=2.4.0b3
+version.name=2.4 Beta3
+dist.version=2_4_0-BETA3-20100908
 spec.title=${Name} API Specification
 impl.title=${Name}
 spec.vendor=JGoodies Karsten Lentzsch
@@ -39,11 +39,11 @@ descriptors.dir = ${top.dir}/conf/service descriptors
 
 # Library Properties ------------------------------------------
 lib.dir         = ${top.dir}/lib
-lib.common.jar  = ${lib.dir}/jgoodies-common-1.0.0.jar
+lib.common.jar  = ${lib.dir}/jgoodies-common-1.0.1.jar
 
 
 # JavaDoc Properties ------------------------------------------
-javadoc.link=http://java.sun.com/j2se/1.4/docs/api/
+javadoc.link=http://java.sun.com/j2se/1.5/docs/api/
 javadoc.packages=com.jgoodies.*
 javadoc.overview=${src.core.dir}/overview.html
 
