@@ -7,13 +7,17 @@
 INTRODUCTION
 
     This version requires Java 5 and the new JGoodies Common library.
-    Make sure that you include jgoodies-common-1.0.0.jar in your
+    Make sure that you include jgoodies-common-1.0.1.jar in your
     classpath when using this Looks version.
     
 
 OTHER CHANGES
 
     o Fixed bug in the FontTest on non-Windows platforms.
+    o Replaced the green Plastic question icon by the standard
+      (blue) help icon. Question dialogs shall use a question mark
+      in the main instruction, not a question icon. 
+      The blue question mark icon is for help messages and help windows.  
     
 ---------------------------------------------------------------------------
 
